Adicionando configuração de deploy

--- a/package.json
+++ b/package.json
@@ -4,8 +4,12 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "build": "ng build  --base-href=/acoes/",
+    "ghpages": "angular-cli-ghpages --dir=dist/acoes",
+    "deploy": "npm run build & npm run ghpages",
     "watch": "ng build --watch --configuration development",
+    "json:server": "json-server --watch db.json",
+    "json:server:routes": "json-server --watch db.json --routes routes.json ",
     "test": "ng test"
   },
   "private": true,
@@ -18,17 +22,23 @@
     "@angular/platform-browser": "^16.0.0",
     "@angular/platform-browser-dynamic": "^16.0.0",
     "@angular/router": "^16.0.0",
+    "@ng-bootstrap/ng-bootstrap": "^15.0.1",
+    "angular-cli-ghpages": "^1.0.6",
     "bootstrap": "^5.2.3",
     "jquery": "^3.7.0",
+    "json-server": "^0.17.3",
     "material-icons": "^1.13.7",
     "materialize-css": "^1.0.0",
+    "ng-bootstrap": "^1.6.3",
+    "ngx-bootstrap": "^10.2.0",
+    "or": "^0.2.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^16.0.2",
-    "@angular/cli": "~16.0.2",
+    "@angular/cli": "^16.0.5",
     "@angular/compiler-cli": "^16.0.0",
     "@types/jasmine": "~4.3.0",
     "@types/materialize-css": "^1.0.11",
